SQuirreL SQL FX Change Log
==============================

Bug fix: Code completion did not work inside column lists that were separated by commas but no white spaces.

Improved connect progress dialog to show progress information.

Bug fix: Code completion did'nt calculate the table/view closest to the caret right. That's why completion of unqualified columns was sometimes wrong.

More improved Object tree performance: Details tabs data are now loaded on demand.

Bug fix: Search in SQL result table didn't work when user had rearranged column orders.

Feature: New setting in settings dialog to limit number of SQL result tabs.

Bug fix: When selection inside a SQL result table is in progress and the mouse pointer is dragged right or left out of the table the table did not scroll.

Removed the maximum Java-VM memory parameter (-Xmx512m) from the Windows start batch. Java should be able to manage its memory itself.

Feature: Search in SQL result table.

Bug fix: Appending an SQL from SQL history to the editor does not add a new line anymore if the editor is empty.

Improved Object tree performance: Details tabs are now loaded on demand.

Bug fix: Tools popup and bookmarks popup didn't scroll right when up or down key was used.

Feature: Alias name in SQL history search dialog.

Upgraded RichTextFX to version 0.6.6 and fixed the code completion problem that resulted from changes in RichTextFX, see some paragraphs below.
  Note: This makes SQuirreL FX compatible with jdk1.8.0_60.

Bug fix: When an area of a result table was selected that exceeded valid columns, a NullPointerException occurred when any table copy function was executed.

Bug fix: File handling now remembers the last directory.

Bug fix: Fixed memory leak concerning toolbar buttons.
  Excerpt from Steven Zecks mail announcing the problem:
  "Part of the problem now is the ToolbarButtonsHandler from commit 54d130.